--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "ra-data-json-server": "^4.16.0",
     "ra-data-simple-rest": "^4.16.17",
     "react": "^18.2.0",
-    "react-admin": "^4.16.0",
+    "react-admin": "^4.16.18",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
